--- a/android-developer.html
+++ b/android-developer.html
@@ -76,7 +76,7 @@ learning,?...</p>
 <p>Jul 18, 2019 ... Apply online for the job of Android Developer (M/F) #Kotlin - Paris (relocation 
 accepted) at Kapten.</p>
 <hr/>
-<h5><a href='https://wheely.workable.com/j/585D1647A6?viewed=true'>Android Developer - Apply online - Wheely - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wheely.workable.com/j/585D1647A6?viewed=true'>Android Developer - Apply online - Wheely - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 ??. ????? ... Apply online for the job of Android Developer at Wheely.</p>
 <hr/>
@@ -108,7 +108,7 @@ accepted) at Kapten.</p>
 <p><span class="badge badge-light">Vienna Vienna</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
+<h5><a href='https://endios.join.com/jobs/246949-android-developer-m-d-f-immediately-open-ended-full-time-contract'>Job @ endios (Hamburg): Android Developer (m/d/f) ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -212,7 +212,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light">Warsaw</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/vpTech/6b3d710c-c3f2-4807-b121-243f2c4ac465'>vpTech - Android Developer H/F</a></h5> 
+<h5><a href='https://jobs.lever.co/vpTech/6b3d710c-c3f2-4807-b121-243f2c4ac465'>vpTech - Android Developer H/F</a></h5> 
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -224,7 +224,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/freenow/jobs/1721622'>Job Application for Senior Android Developer Barcelona at FREE NOW</a></h5> 
+<h5><a href='https://boards.greenhouse.io/freenow/jobs/1721622'>Job Application for Senior Android Developer Barcelona at FREE NOW</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -252,7 +252,7 @@ European software development company providing services worldwide since?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
-<h5><a href='https://urban.workable.com/j/8E05A619E8'>Urban - Jobs: Android Developer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://urban.workable.com/j/8E05A619E8'>Urban - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">Vilnius Vilnius London Paris Manchester</span></p>
 <p>Posted on: 2019-07-16</p>
 <hr/>
@@ -281,7 +281,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wundermanthompsoncommerce.workable.com/j/1797B0961D'>Wunderman Thompson Commerce - Jobs: Android Developer - Apply online</a></h5> 
+<h5><a href='https://wundermanthompsoncommerce.workable.com/j/1797B0961D'>Wunderman Thompson Commerce - Jobs: Android Developer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-14</p>
 <hr/>
@@ -373,7 +373,7 @@ this job. Responsabilidades. -Dise?o y desarrollo de aplicaciones modulares,?...
 <p><span class="badge badge-light">Vancouver</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/kaufDA/743999691221528-android-developer-senior-m-f-d-'>Bonial International Gmbh Android Developer (Senior) (m/f/d) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/kaufDA/743999691221528-android-developer-senior-m-f-d-'>Bonial International Gmbh Android Developer (Senior) (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-07</p>
 <hr/>
