--- a/machine.html
+++ b/machine.html
@@ -43,7 +43,7 @@
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
-<h5><a href='https://rakuten.referrals.selectminds.com/jobs/application-engineer-machine-learning-group-bdd-9714'>Application Engineer (Machine Learning Group): BDD - Rakuten Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rakuten.referrals.selectminds.com/jobs/application-engineer-machine-learning-group-bdd-9714'>Application Engineer (Machine Learning Group): BDD - Rakuten Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -69,7 +69,7 @@ recognition, categorization, text embedding, etc); Computer Vision, Image?...</p
 <p>4 days ago ... Apply online for the job of Staff Software Engineer, Applied Machine Learning at 
 SmartNews, Inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=otZA8fwU&__jvst=Employee+Referral&__jvsd=soLEwfw3&__jvsc=Twitter&bid=n6eIVLwd'>ServiceNow Careers - Staff Machine Learning Engineer - NLU Platform</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
@@ -178,7 +178,7 @@ Engineering - Infrastructure. Full-time. Submit your application. Resume/CV ?.</
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/ecovadis/743999692157449-senior-machine-learning-data-f-m-paris'>EcoVadis Senior Machine Learning Data (F/M) - Paris | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/ecovadis/743999692157449-senior-machine-learning-data-f-m-paris'>EcoVadis Senior Machine Learning Data (F/M) - Paris | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris Paris</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -253,7 +253,7 @@ Jose (CA); Contract Senior Consultant, Adaptive Insights - Financial Planning?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F23013344B'>SmartNews, Inc. - Jobs: Principal/Senior Staff Software Engineer, Applied Machine Learning - Apply online</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-07-21</p>
 <hr/>
@@ -310,7 +310,7 @@ and data science. A successful candidate should also have previous?...</p>
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://codete.workable.com/j/7FB9A1FA62?viewed=true'>Codete - Jobs: Senior Machine Learning Engineer - Apply online</a></h5> 
+<h5><a href='https://codete.workable.com/j/7FB9A1FA62?viewed=true'>Codete - Jobs: Senior Machine Learning Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 10, 2019 ... Apply online for the job of Senior Machine Learning Engineer at Codete.</p>
 <hr/>
@@ -355,7 +355,7 @@ knowledge and outstanding database, data analytics and programming skills.</p>
 <p>Jul 10, 2019 ... BSc, MSc or PhD in Computer Science, Statistics, or comparable knowledge; 
 Prior strong expertise and experience in machine learning and data science?...</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/robustai/jobs/4347975002'>Job Application for Machine Learning Engineer at Robust.AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/robustai/jobs/4347975002'>Job Application for Machine Learning Engineer at Robust.AI</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -363,7 +363,7 @@ Prior strong expertise and experience in machine learning and data science?...</
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/ava/b5801683-d955-4c8f-bbb7-1012a3b83adf'>Ava - Machine Learning Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/ava/b5801683-d955-4c8f-bbb7-1012a3b83adf'>Ava - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 9, 2019 ... Interested to learn more about it? Let's chat. Especially if: - Research experience 
 in algorithms and specifically Machine Learning (including Deep Learning).</p>
@@ -384,7 +384,7 @@ in algorithms and specifically Machine Learning (including Deep Learning).</p>
 <p><span class="badge badge-light">Redwood City, CA</span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/getdor/25a3741b-ed30-4d41-80b9-075573ab5c32'>Dor - Machine Learning Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/getdor/25a3741b-ed30-4d41-80b9-075573ab5c32'>Dor - Machine Learning Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Machine Learning Engineer. San Francisco. Engineering. Full-time. Apply for this 
 job. Dor is a retail analytics startup that uses a first-of-its-kind hardware and?...</p>
@@ -397,7 +397,7 @@ job. Dor is a retail analytics startup that uses a first-of-its-kind hardware an
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
-<h5><a href='https://smartnews.workable.com/j/F9C7D91FB2'>SmartNews, Inc. - Jobs: Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://smartnews.workable.com/j/F9C7D91FB2'>SmartNews, Inc. - Jobs: Machine Learning Scientist, AI Foundation - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
